Changed names in article

--- a/modelo_seminarios_latex_v1.2/artigo.tex
+++ b/modelo_seminarios_latex_v1.2/artigo.tex
@@ -82,11 +82,11 @@
 %------------------------------------------------
 \author[
   addressref = {aff1},                       % Identifica o autor
-  email      = {italo.menezes@ccc.ufcg.edu.br} % email para contato
+  email      = {italo.poroca@ccc.ufcg.edu.br} % email para contato
 ]
 {
   \inits{IMdLP}      % Letras iniciais do autor #3
-  \fnm{Italo M. de L.} % Nome do autor #3 (first and middle name)
+  \fnm{Italo Menezes de Lima} % Nome do autor #3 (first and middle name)
   \snm{Poroca}    % Ultimo nome do autor #3 (last name)
 }
 %------------------------------------------------
