Adding names, adresses, etc

--- a/modelo_seminarios_latex_v1.2/artigo.tex
+++ b/modelo_seminarios_latex_v1.2/artigo.tex
@@ -86,7 +86,7 @@
 ]
 {
   \inits{IMdLP}      % Letras iniciais do autor #3
-  \fnm{Italo Menezes de Lima} % Nome do autor #3 (first and middle name)
+  \fnm{Italo M. de Lima} % Nome do autor #3 (first and middle name)
   \snm{Poroca}    % Ultimo nome do autor #3 (last name)
 }
 %------------------------------------------------
@@ -108,8 +108,8 @@
 %------------------------------------------------
 \address[id=aff1]{
   \orgname{Universidade Federal de Campina Grande,
-           Centro de Tecnologia e Recursos Naturais,
-           Unidade Acadêmica de Engenharia Civil},
+           Centro de Engenharia Elétrica e Informática,
+           Departamento de Sistemas e Computação},
   \street{Rua Aprígio Veloso, 882, Bairro Universitário},
   \postcode{58429-140},
   \city{Campina Grande},
