--- a/modelo_seminarios_latex_v1.2/artigo.tex
+++ b/modelo_seminarios_latex_v1.2/artigo.tex
@@ -95,7 +95,7 @@
 %------------------------------------------------
 \author[
   addressref = {aff1},                 % Identifica o autor
-  email      = {vinicius.lucena@ccc.ufcg.edu.br} % email para contato
+  email      = {valter.lucena@ccc.ufcg.edu.br} % email para contato
 ]
 {
   \inits{VVMdL}     % Letras iniciais do autor #4
@@ -209,7 +209,7 @@ If we assume that sensitive cells follow a deterministic decay $Z_0(t)=xe^{\lamb
 %------------------------------------------------
 % Exemplo de Tabela
 %------------------------------------------------
-\section{Exemplo de Tabela}
+\section{Software Livre}
 
 Table~\ref{tag_tabela_01} shows the average $ \alpha $ and the standard deviation for the CCR \cite{Rosenfeld:1970} obtained by the \textit{GLCM+SOM} method. We can conclude that for the Brodatz dataset~\cite{Domingues:2010} the processing tool based on mean vectors is the best option~\cite{Rosenfeld:1970, Diday:1989}. Considering this result~\cite{Visible:2013}, the mean vector approach is adopted as processing tool of the \textit{GLCM+SOM} method for the next experiments \cite{Fulano:2009}.
 
@@ -225,6 +225,40 @@ Table~\ref{tag_tabela_01} shows the average $ \alpha $ and the standard deviatio
    A3  & ..   & .    & .    \\ \hline
   \end{tabular}
 \end{table}
+
+\subsection{Software as a Product}
+
+aqui vc faz
+
+\subsection{Software as a Service}
+
+olar
+
+\subsection{Componentes da Produção de Software}
+
+acesso ao software
+
+\section{Licenças de Publicação}
+
+tarara
+
+\section{Software Livre Para Empresas}
+
+
+\subsection{estatisticas de mercado para saap}
+oi
+
+
+\subsection{Software as a service}
+
+aqui vc faz
+
+\subsection{core}
+
+\section{Tendências}
+
+olar
+
 
 %--------------------------------------------------------------------------------------------------
 %--------------------------------------------------------------------------------------------------
