--- a/modelo_seminarios_latex_v1.2/artigo.tex
+++ b/modelo_seminarios_latex_v1.2/artigo.tex
@@ -213,6 +213,8 @@ If we assume that sensitive cells follow a deterministic decay $Z_0(t)=xe^{\lamb
 
 Table~\ref{tag_tabela_01} shows the average $ \alpha $ and the standard deviation for the CCR \cite{Rosenfeld:1970} obtained by the \textit{GLCM+SOM} method. We can conclude that for the Brodatz dataset~\cite{Domingues:2010} the processing tool based on mean vectors is the best option~\cite{Rosenfeld:1970, Diday:1989}. Considering this result~\cite{Visible:2013}, the mean vector approach is adopted as processing tool of the \textit{GLCM+SOM} method for the next experiments \cite{Fulano:2009}.
 
+testando 123
+
 % Use a ferramenta para criar tabelas: http://www.tablesgenerator.com/
 \begin{table}[h!]
 \label{tag_tabela_01}
