--- a/modelo_seminarios_latex_v1.2/artigo.tex
+++ b/modelo_seminarios_latex_v1.2/artigo.tex
@@ -211,26 +211,28 @@ If we assume that sensitive cells follow a deterministic decay $Z_0(t)=xe^{\lamb
 %------------------------------------------------
 \section{Software Livre}
 
-Table~\ref{tag_tabela_01} shows the average $ \alpha $ and the standard deviation for the CCR \cite{Rosenfeld:1970} obtained by the \textit{GLCM+SOM} method. We can conclude that for the Brodatz dataset~\cite{Domingues:2010} the processing tool based on mean vectors is the best option~\cite{Rosenfeld:1970, Diday:1989}. Considering this result~\cite{Visible:2013}, the mean vector approach is adopted as processing tool of the \textit{GLCM+SOM} method for the next experiments \cite{Fulano:2009}.
+Por \textit{Software} Livre entende-se aquele que respeita a liberdade e o censo de comunidade do usuário. Isto é, todo o \textit{software} que pode ser usado, copiado, estudado, modificado e redistribuído sem restrições.
 
-testando 123
+Durante a década de 60, quando os computadores eram mais utilizados em empresas e instituições governamentais, não havia a ideia de \textit{software} e \textit{hardware} como algo separado, do ponto de vista comercial. Em geral, o \textit{software} era entregue junto com o código-fonte, ou apenas este último era entregue. Devido a isso, grupos e comunidades de usuários que trocavam informações e compartilhavam código eram comuns. A partir daí, pode-se afirmar que o \textit{software} era livre, em suas origens.
 
-% Use a ferramenta para criar tabelas: http://www.tablesgenerator.com/
-\begin{table}[h!]
-\label{tag_tabela_01}
-\caption{Sample table title. This is where the description of the table should go.}
-  \begin{tabular}{cccc}
-  \hline
-       & B1   & B2   & B3   \\ \hline
-   A1  & 0.1  & 0.2  & 0.3  \\
-   A2  & ...  & ..   & .    \\
-   A3  & ..   & .    & .    \\ \hline
-  \end{tabular}
-\end{table}
+Ainda nessa mesma década, sistemas operacionais e compiladores de linguagens de programação começaram a evoluir, aumentando drasticamente seus custos. Assim, uma indústria pequena e crescente começava a surgir, competindo diretamente com os \textit{softwares} entregues juntos ao \textit{hardware}. Em 1970, a IBM, líder do mercado de computadores da época, anunciou que a partir daquele ano passaria a vender parte de seus programas separada das máquinas. Com isso, a indústria de \textit{software} tomou um rumo em que restrições de acesso e de compartilhamento de código entre desenvolvedores ficaram cada vez mais comuns.
+
+Em 1978, Donald Knuth professor da Universidade de Stanford, começou a trabalhar no TeX, sistema de tipografia popular até hoje no meio acadêmico, que foi distribuído com a ideia de que qualquer um pudesse usá-lo sem restrições (seu código-fonte estava em uma seção do volume 2 do seu livro \textit{The Art of Computer Programing}). A partir daí, a ideia base do \textit{software} livre como conhecido hoje começou a surgir.
+
+Em 1983, Richard Stallman, funcionário do MIT, teve uma experiência negativa com \textit{software} comercial, e deu origem ao Projeto GNU. Durante o período que estava no MIT, identificou uma falha no \textit{software} de uma impressora. Ao tentar corrigí-lo, a empresa se negou disponibilizar o código-fonte. Isso o motivou a criar um mecanismo legal de garantia para que todos pudessem desfrutar dos direitos de copiar, redistribuir e modificar \textit{Software}, dando origem à licença GPL. Para institucionalizar o Projeto GNU, Stallman fundou a Free Software Foundation. Nasce assim o Movimento do \textit{Software} Livre.
+
+Em julho de 1991, Linus Torvalds, estudante da Universidade de Helsinki - Finlândia, divulgou nota com menções sobre seu projeto de construir um núcleo operacional livre, similar ao Minix, e obteve ajuda de vários desenvolvedores ao redor do mundo. Em setembro do mesmo ano, Linus lançou a versão oficial do que hoje é o Linux. Centenas de desenvolvedores se juntaram ao projeto para integrar todo o sistema GNU (compilador, editor de textos, shell, etc) em torno do núcleo do Linux. Nasce então, sob a licença GPL, o sistema operacional GNU/Linux.
+
+Após isso, o movimento do \textit{software} livre vem crescendo com grandes projetos, tais como todas as distribuições do Linux, o OpenStack, o Eclipse, e empresas, como a RedHat, Canonical, Free Software Foundation -- como já citada --, entre outras.
+
+Algo a ser esclarecido é que \textit{software} livre é diferente de \textit{software} em domínio público e de \textit{software} gratuito. Em domínio público, significa que seu autor abriu mão dos seus direitos autorais. E quanto a ser gratuito, pode citar os serviços de \textit{cloud-computing} da RedHat, e a distribuição Suse Linux, com foco empresarial, que não são gratuitos.
+
+Entram então alguns conceitos importantes a respeito de \textit{software} livre, tais como \textit{software} como um produto (SaaP), \textit{software} como um serviço (SaaS) e os componentes da procução de \textit{software}.
+
 
 \subsection{Software as a Product}
 
-aqui vc faz
+\textit{Software as a Product}//citação aqui?? -- ou \textit{Software} como um Produto, em tradução livre --
 
 \subsection{Software as a Service}
 
