free software nas empresas feito

--- a/modelo_seminarios_latex_v1.2/artigo.tex
+++ b/modelo_seminarios_latex_v1.2/artigo.tex
@@ -232,6 +232,31 @@ tarara
 
 \section{Software Livre Para Empresas}
 
+O uso de \textit{software} livre em ambientes domésticos e comerciais tem crescido bastante nos últimos anos. O governo brasileiro, inclusive, tem investido bastante em soluções livres nos seus computadores. O mercado em geral também está abraçando a ideia e isso tem feito com que cada vez mais empresas surjam com foco no desenvolvimento de aplicaçãoes baseadas em \textit{software} livre.
+
+Para o cliente, há inúmeros benefícios no uso de \textit{software} livre em suas máquinas. Em primeiro lugar: economia. Para o usuário final, isso significa menos um custo. Para empresas, uma enorme economia.
+
+Para facilitar, pode-se imaginar uma empresa imaginária de \textit{call center}: em uma empresa deste tipo, há muitos computadores. A empresa imaginária teria 1000 computadores para uso dos atendentes mais 200 computadores para uso de supervisores e gerentes. No total 1.200 máquinas que precisam de um sistema operacional e, no caso das máquinas dos supervisores e gerentes, suíte de escritório.
+
+Levando em conta que o custo médio da licença de um sistema operacional proprietário é R\$ 200,00, apenas com este recurso, a empresa gastaria R\$ 240.000,00. Com o uso de \textit{software} livre, a empresa economizaria bastante dinheiro ao adotar um sistema operancional de código aberto, como o Debian.
+
+Além do benefício financeiro, \textit{softwares} livres são, geralmente, mais seguros. Isso acontece por que com o código fonte disponível, qualquer programador pode descobrir um \textit{bug} (erro) e submeter uma correção para ele. O Linux, \textit{kernel} de sistema operacional livre mais difundido no mundo é considerado o sistema operacional mais seguro.
+
+Outro benefício é a facilidade na alteração do funcionamento de algum programa. Com o código aberto, um empresário, por exemplo, pode requisitar a alguma empresa que altere o comportamento de um programa, ou acrescente algo, para adequá-lo à sua realidade e aos seus problemas.
+
+Porém, para o lado das fabricantes de \textit{software}, quais as vantagens de fabricar \textit{software} livre?
+
+Muitas pessoas quando ouvem o termo \textit{software} livre o associam à \textit{software} gratuito. Isso não é verdade. \textit{Software} livre não quer dizer \textit{software} gratuito e existem diversas abordagens comerciais que podem ser utilizadas para monetizar programas de código aberto.
+
+Existem inúmeras empresas que lucram com o \textit{software} livre. A Canonical, desenvolvedora da distribuição Linux Ubuntu tem uma receita anual de \$ 65,7 milhões de dólares. Ela se mantém através de doações e acordos comerciais para inserir conteúdo patrocinado dentro dos seus \textit{softwares}.
+
+A Mozilla, empresa responsável pelo popular navegador de internet Firefox tem uma receita de \$ 330 milhões de dólares anuais. O Firefox, mesmo sendo  um \textit{softwares} livre, gera boa parte dessa receita através de acordo com empresas para agregação de serviços (como o Google Search ser o buscador padrão do navegador) e propagandas em algumas seções do navegador, como a aba "Nova Guia".
+
+A Red Hat é, sem dúvida, uma das mais bem sucedidas empresas no ramo do \textit{softwares} livre. Ela atua através do fornecimento de soluções corporativas. Seus principais produtos são armazenamento, sistemas operacionais, consultoria, treinamento e suporte. Ela utiliza várias abordagens de mercado para vender seus serviços e isso tem dado muito certo. Em 2014, sua receita foi de \$ 1,53 bilhões de dólares. Seus serviços são amplamente utilizados e bem aceitos no mercado.
+
+Essas empresas todas trabalham desenvolvendo \textit{software} livre e tem uma receita considerável. Existem inúmeros outros exemplos de sucesso com o \textit{software} livre: Android, Apache, LibreOffice, Swift são exemplos de aplicações de sucesso no mundo do \textit{software} livre. 
+
+Existem inúmeras abordagens de mercado para fatura com \textit{software} livre. Venda de suporte, treinamento, consultoria, propaganda, dentre outros, são alguns exemplos disso. A seguir, será apresentado as três principais abordagens de mercado para o \textit{software} livre.
 
 \subsection{estatisticas de mercado para saap}
 oi
@@ -241,7 +266,9 @@ oi
 
 aqui vc faz
 
-\subsection{core}
+\subsection{Open Core}
+
+
 
 \section{Tendências}
 
