--- a/modelo_seminarios_latex_v1.2/artigo_bibliografia.bib
+++ b/modelo_seminarios_latex_v1.2/artigo_bibliografia.bib
@@ -76,6 +76,13 @@
   note   = {http://www.nlm.nih.gov/research/visible/ - accessed 19-July-2008}
 }
 
+@url{Br-linux:2016,
+author = {Augusto Campos},
+title = {O que {\'e} software livre},
+year = {2006},
+nota = {http://br-linux.org/linux/faq-softwarelivre}
+}
+
 
 
 
