--- a/modelo_seminarios_latex_v1.2/artigo.tex
+++ b/modelo_seminarios_latex_v1.2/artigo.tex
@@ -124,17 +124,17 @@
 \begin{abstractbox}
 	
 \begin{abstract} 
-Escrever no máximo $150$ palavras no resumo do trabalho. Exemplo: The objective of this work is to determine if people are interacting in TV video by detecting whether they are looking at each other or not.We determine both the temporal period of the interaction and also spatially localize the relevant people. We make the following four contributions: (\textit{i}) head detection with implicit coarse pose information (front, profile, back); (\textit{ii}) continuous head pose estimation in unconstrained scenarios (TV video) using Gaussian process regression; (\textit{iii}) propose and evaluate several methods for assessing whether and when pairs of people are looking at each other in a video shot; and (\textit{iv}) introduce new ground truth annotation for this task, extending the TV human interactions dataset. The performance of the methods is evaluated on this dataset, which consists of $300$ video clips extracted from TV shows. Despite the variety and difficulty of this video material, our best method obtains an average precision of $87.6\%$ in a fully automatic manner.
+Este trabalho tem como objetivo fazer um estudo sobre o \textit{software} livre e suas aplicações comerciais. Atualmente, o uso de \textit{software} livre tem crescido bastante e é preciso entender o que seria, detalhadamente, \textit{software} livre. Além disso, este trabalho mostra como empresas mudaram seu posicionamento de mercado para se adaptarem a essa realidade e quais são os principais meios de gerar receita através do \textit{software} livre.
 \end{abstract}
 
 %--------------------------------------------------------------------------------------------------
 % Palavras-chaves: Entre 3 e 6 palavras chaves
 %--------------------------------------------------------------------------------------------------
 \begin{keyword}
-  \kwd{Escreva}
-  \kwd{algumas}
-  \kwd{palavras-chaves}
-  \kwd{aqui!}
+  \kwd{\textit{software} livre}
+  \kwd{computação}
+  \kwd{código aberto}
+  \kwd{negócios em computação}
 \end{keyword}
 
 \end{abstractbox} % Não alterar
@@ -149,7 +149,7 @@ Escrever no máximo $150$ palavras no resumo do trabalho. Exemplo: The objective
 %------------------------------------------------
 \section{Introdução}
 
-O \textit{software} livre é uma realidade que existe desde os primórdios da computação. Baseando-se na ideia básica de que o código fonte deve ser público, o movimento do \textit{software} livre gerou, e ainda gera, bastante polêmica dentre a comunidade da tecnologia da informação, especialmente quando o assunto tange as grandes corporações que lucram com a venda de \textit{softwares} proprietários. Como movimento, iniciou em 1983 com um americano chamado Richard Stallman, que liderou o desenvolvimento de um sistema operacional baseado totalmente nas ideias do \textit{software} livre.
+O \textit{software} livre é uma realidade que existe desde os primórdios da computação. Baseando-se na ideia básica de que o código fonte deve ser público, o movimento do \textit{software} livre gerou, e ainda gera, bastante polêmica dentre a comunidade da tecnologia da informação, especialmente quando o assunto tange as grandes corporações que lucram com a venda de \textit{softwares} proprietários. Como movimento, iniciou em 1983 \cite{Br-linux} com um americano chamado Richard Stallman, que liderou o desenvolvimento de um sistema operacional baseado totalmente nas ideias do \textit{software} livre.
 
 Para ser considerado livre, um \textit{software} deve seguir determinadas "leis", que definem como ele deve ser publicado. Para facilitar a publicação, foram criadas licenças genéricas que servem para qualquer \textit{software}.
 
@@ -268,7 +268,12 @@ aqui vc faz
 
 \subsection{Open Core}
 
+O Open Core é um modelo de negócio baseado no uso misto entre \textit{software} livre e \textit{software} fechado. No Open Core, as empresas disponibilizam uma versão básica, porém útil, de algum sistema feito como \textit{software} livre e vendem complementos para esse sistema. Esse complementos, como o próprio nome deixa claro, acrescenta alguma funcionalidade no sistema. Existem inúmeras soluções baseadas no Open Core, como o MySQL da Oracle. É um modelo de negócio muito interessante pois permite que empresas foquem no desenvolvimento de partes pequenas do sistema, produzindo com melhor qualidade e podendo oferecer um melhor suporte.
+A já citada Red Hat também faz uso do Open Core no seu serviço JBoss. 
 
+Para os clientes, é uma abordagem bastante interessante por que permite economizar ao usar um grande \textit{software} livre gratuito e comprar apenas complementos que esta precise.
+
+Há controvérsias acerca da legitimidade do Open Core como sendo \textit{software} livre. Muitas pessoas dizem que pelo fato dos complementos serem, geralmente, de código fechado, não há como classificá-lo como \textit{software} livre. Porém, é uma estratégia de bom senso e que vem dando certo no mercado em geral.
 
 \section{Tendências}
 
@@ -284,18 +289,8 @@ olar
 \bibliography{artigo_bibliografia} % NAO EDITAR! - Bibliography file (usually '*.bib' )
 
 \vspace{1.0cm}
-\parpic{\includegraphics[width=1.5in,clip,keepaspectratio]{tesla.jpg}}
-\noindent {\bf Fulano de Tal} was born in India. She received the B.S. 
-degree in computer science from Kurukshetra University, Kurukshetra, 
-India and the M.Phil. and Ph.D. degrees from the University of Exeter, 
-Exeter, UK in 1999, 2001 and 2004, respectively. Her Ph.D. was in the 
-area of machine learning for image analysis in aviation security. Her 
-main research interests include image processing, natural scene analysis,
-video analysis, and neural networks. She has published more than 30 papers
-in the area of machine learning for image analysis in peer reviewed 
-journals and conferences. Currently she is a Senior Research Fellow at
-Loughborough University leading the project on imaging for road transport
-applications.
+\parpic{\includegraphics[width=1.5in,clip,keepaspectratio]{antunes.jpg}}
+\noindent {\bf Antunes Dantas da Silva}  Nasceu em Picuí, interior do estado brasileiro Paraíba. Possui formação técnica em Manutenção e Suporte em Informática pelo Instituto Federal da Paraíba Campus Campina Grande. Foi membro do Grupo de Pesquisa em Redes Convergentes. Atualmente, está na graduação em Ciência da Computação, pela Universidade Federal de Campina Grande. É membro do Programa de Educação Tutorial, onde desenvolve o Sistema de Avaliação Docente, orientado pelo professor doutor Matheus Gaudêncio do Rêgo. Tem interesse em Engenharia de Software, Desenvolvimento de Sistemas e Telecomunicações.
 
 \parpic{\includegraphics[width=1.5in,clip,keepaspectratio]{tesla.jpg}}
 \noindent {\bf Fulano de Tal} was born in India. She received the B.S. 
