--- a/modelo_seminarios_latex_v1.2/artigo.tex
+++ b/modelo_seminarios_latex_v1.2/artigo.tex
@@ -242,7 +242,24 @@ acesso ao software
 
 \section{Licenças de Publicação}
 
-tarara
+Após o crescimento exponencial da produção de dispositivos eletrônicos e com a popularização dos mesmos,iniciou-se uma grande demanda pela produção de programas lógicos que pudessem tornar os dispositivos físicos mais úteis e aplicáveis para o público em geral. A produção de \textit{software} teve um aumento de mercado e procura, com isso surgiram formas de regulamentação da venda ou distribuição dessas aplicações.
+Uma licença de software pode ser caracterizado como uma forma de comportamento relacionada com a redistribuição de \textit{software}, a exemplo dos Estados Unidos, toda distibuição de software está sob a proteção de \textit{copyright} (ou direito de cópia).
+O \textit{copyright} é um direito legal que garante ao criador de um trabalho (no caso, desenvolvedores de \textit{software}) direitos exclusivos sobre a sua obra. O código fonte é considerado como propriedade intelectual do autor, podendo ser ele uma empresa, um grupo isolado de desenvolvedores ou um único programador.
+As licenças de software garantem ao licenciado (usualmente, o licenciado é o usuário final, ver subseção 1.3) de um \textit{software}, normalmente, uso livre nas fronteiras dos direitos exclusivos do distribuidor. A exceção é a licença de domínio público, onde a cópia, distribuição e modificação são permitidas sobre um código fonte de uma aplicação.
+Existem duas licenças maiores que se distinguem em como elas se comportam em relação a duas permissões básicas: o direito de modificar e reusar um \textit{software}. A primeira é a licença proprietária (popularmente conhecida como código fechado), nela, ambos os direitos de modificação e reuso não são licenciados, a outra é a licenças de código \textit{FOSS} (\textit{Free and Open Source Software}) onde ambos os direitos são garantidos para o licenciado.
+\begin{table}
+\label{tag_tabela_1}
+\caption{Resumo dos direitos garantidos pelas licenças de software}
+	\begin{tabular}{cccc}
+							&	Domínio Público	&	\textit{FOSS}				&	Licença Proprietária
+	Direito de cópia		&	Sim				&	Sim							&	Não
+	Direito de modificar	&	Sim				&	Sim							&	Não
+	Direito de distribuição	&	Sim				&	Sim, sob a mesma licença	&	Não
+	\end{tabular}
+\end{table}
+Alguns exemplos de \textit{software} sob cada uma das licenças são: SQLite e o CERN HTTPd para licenças de domínio público; o kernel do Linux e o \textit{webserver} Apache para licenças de software livre e o Windows e o Mac OSX.
+Dentro da licença \textit{FOSS}, várias empresas mantêm definições no tocante as suas licenças. Contudo, a Free Software Foundation segue uma definição mais geral de \textit{software} livre e dispõe de diversas licenças seguindo tal definição. As licenças compatíveis com as orientações da Free Software Foundation são categorizados como produtos sob a licença \textit{copylefted}. Dentro do \textit{copyleft}, temos inúmeros e distintos exemplos de licenças de \textit{software}, um deles é a \textit{General Public License} que garante o direito ilimitado de reprodução, cópia, estudo e modificação. 
+Existem também as chamadas licenças permissivas que tem como objetivo estabelecer o mínimo de requerimentos possíveis para a distribuição e uso do \textit{software}. Entre elas estão a licença BSD (\textit{Berkeley Software Distribution}) e a \textit{MIT License}, que obtém o mínimo de restrição no quesito distribuição, porém com livre acesso para uso, estudo, cópia, etc. Assim, licenças permissivas permitem o uso do \textit{software} até mesmo na constituição de um \textit{software} maior com licença proprietária.
 
 \section{Software Livre Para Empresas}
 
@@ -271,31 +288,9 @@ olar
 \bibliography{artigo_bibliografia} % NAO EDITAR! - Bibliography file (usually '*.bib' )
 
 \vspace{1.0cm}
-\parpic{\includegraphics[width=1.5in,clip,keepaspectratio]{tesla.jpg}}
-\noindent {\bf Fulano de Tal} was born in India. She received the B.S. 
-degree in computer science from Kurukshetra University, Kurukshetra, 
-India and the M.Phil. and Ph.D. degrees from the University of Exeter, 
-Exeter, UK in 1999, 2001 and 2004, respectively. Her Ph.D. was in the 
-area of machine learning for image analysis in aviation security. Her 
-main research interests include image processing, natural scene analysis,
-video analysis, and neural networks. She has published more than 30 papers
-in the area of machine learning for image analysis in peer reviewed 
-journals and conferences. Currently she is a Senior Research Fellow at
-Loughborough University leading the project on imaging for road transport
-applications.
+\parpic{\includegraphics[width=1.5in,clip,keepaspectratio]{gabriel.jpg}}
+\noindent {\bf Gabriel Silva Vinha} nasceu no Brasil, no estado de São Paulo e na cidade de São Paulo. Atualmente, está na graduação em ciência da computação, pela Universidade Federal de Campina Grande. Atualmente, é desenvolvedor part-time em um projeto da parceria entre o Laboratório de Sitemas Distribuídos, \textit{Software Practices Laboratory}, Lenovo Brasil e \textit{RedHat International}. Tem interesse na área de desenvolvimento web, com foco em aplicações e sistemas em nuvem.
 
-\parpic{\includegraphics[width=1.5in,clip,keepaspectratio]{tesla.jpg}}
-\noindent {\bf Fulano de Tal} was born in India. She received the B.S. 
-degree in computer science from Kurukshetra University, Kurukshetra, 
-India and the M.Phil. and Ph.D. degrees from the University of Exeter, 
-Exeter, UK in 1999, 2001 and 2004, respectively. Her Ph.D. was in the 
-area of machine learning for image analysis in aviation security. Her 
-main research interests include image processing, natural scene analysis,
-video analysis, and neural networks. She has published more than 30 papers
-in the area of machine learning for image analysis in peer reviewed 
-journals and conferences. Currently she is a Senior Research Fellow at
-Loughborough University leading the project on imaging for road transport
-applications.   
 
 
 %\end{tabular}
