--- a/modelo_seminarios_latex_v1.2/artigo_bibliografia.bib
+++ b/modelo_seminarios_latex_v1.2/artigo_bibliografia.bib
@@ -76,8 +76,29 @@
   note   = {http://www.nlm.nih.gov/research/visible/ - accessed 19-July-2008}
 }
 
+@url{Visible:2016,
+	author	= {Jeff Atwood},
+	title	= {Pick a License, Any License},
+	year	= {2007},
+	note	= {https://blog.codinghorror.com/pick-a-license-any-license/}
+} 
 
+@book{Dowd:2006,
+  Title     = {Livro de Eng. Civil},
+  Author    = {Dowd, Raymond J.},
+  Year      = {2006},
+  Isbn      = {0-314-96279-4},
+  Edition   = {1},
+  Publisher = {Thomson West},
+  Address   = {New York, NY, USA},
+} 
 
+@url{Visible:2016,
+	author	= {Comunity},
+	title	= {Software License},
+	year	= {-},
+	note	= {https://en.wikipedia.org/wiki/Software_license}
+} 
 
 
 
