--- a/modelo_seminarios_latex_v1.2/artigo.tex
+++ b/modelo_seminarios_latex_v1.2/artigo.tex
@@ -149,7 +149,7 @@ Este trabalho tem como objetivo fazer um estudo sobre o \textit{software} livre 
 %------------------------------------------------
 \section{Introdução}
 
-O \textit{software} livre é uma realidade que existe desde os primórdios da computação. Baseando-se na ideia básica de que o código fonte deve ser público, o movimento do \textit{software} livre gerou, e ainda gera, bastante polêmica dentre a comunidade da tecnologia da informação, especialmente quando o assunto tange as grandes corporações que lucram com a venda de \textit{softwares} proprietários. Como movimento, iniciou em 1983 \cite{Br-linux} com um americano chamado Richard Stallman, que liderou o desenvolvimento de um sistema operacional baseado totalmente nas ideias do \textit{software} livre.
+O \textit{software} livre é uma realidade que existe desde os primórdios da computação. Baseando-se na ideia básica de que o código fonte deve ser público, o movimento do \textit{software} livre gerou, e ainda gera, bastante polêmica dentre a comunidade da tecnologia da informação, especialmente quando o assunto tange as grandes corporações que lucram com a venda de \textit{softwares} proprietários. Como movimento, iniciou em 1983 \cite{Campos:2016} com um americano chamado Richard Stallman, que liderou o desenvolvimento de um sistema operacional baseado totalmente nas ideias do \textit{software} livre.
 
 Para ser considerado livre, um \textit{software} deve seguir determinadas "leis", que definem como ele deve ser publicado. Para facilitar a publicação, foram criadas licenças genéricas que servem para qualquer \textit{software}.
 
@@ -232,7 +232,7 @@ tarara
 
 \section{Software Livre Para Empresas}
 
-O uso de \textit{software} livre em ambientes domésticos e comerciais tem crescido bastante nos últimos anos. O governo brasileiro, inclusive, tem investido bastante em soluções livres nos seus computadores. O mercado em geral também está abraçando a ideia e isso tem feito com que cada vez mais empresas surjam com foco no desenvolvimento de aplicaçãoes baseadas em \textit{software} livre.
+O uso de \textit{software} livre em ambientes domésticos e comerciais tem crescido bastante nos últimos anos. O governo brasileiro, inclusive, tem investido bastante em soluções livres nos seus computadores \cite{Jose:2016}. O mercado em geral também está abraçando a ideia e isso tem feito com que cada vez mais empresas surjam com foco no desenvolvimento de aplicaçãoes baseadas em \textit{software} livre \cite{Hecker:2016}.
 
 Para o cliente, há inúmeros benefícios no uso de \textit{software} livre em suas máquinas. Em primeiro lugar: economia. Para o usuário final, isso significa menos um custo. Para empresas, uma enorme economia.
 
@@ -240,7 +240,7 @@ Para facilitar, pode-se imaginar uma empresa imaginária de \textit{call center}
 
 Levando em conta que o custo médio da licença de um sistema operacional proprietário é R\$ 200,00, apenas com este recurso, a empresa gastaria R\$ 240.000,00. Com o uso de \textit{software} livre, a empresa economizaria bastante dinheiro ao adotar um sistema operancional de código aberto, como o Debian.
 
-Além do benefício financeiro, \textit{softwares} livres são, geralmente, mais seguros. Isso acontece por que com o código fonte disponível, qualquer programador pode descobrir um \textit{bug} (erro) e submeter uma correção para ele. O Linux, \textit{kernel} de sistema operacional livre mais difundido no mundo é considerado o sistema operacional mais seguro.
+Além do benefício financeiro, \textit{softwares} livres são, geralmente, mais seguros \cite{Castro}. Isso acontece por que com o código fonte disponível, qualquer programador pode descobrir um \textit{bug} (erro) e submeter uma correção para ele. O Linux, \textit{kernel} de sistema operacional livre mais difundido no mundo é considerado o sistema operacional mais seguro.
 
 Outro benefício é a facilidade na alteração do funcionamento de algum programa. Com o código aberto, um empresário, por exemplo, pode requisitar a alguma empresa que altere o comportamento de um programa, ou acrescente algo, para adequá-lo à sua realidade e aos seus problemas.
 
@@ -248,11 +248,11 @@ Porém, para o lado das fabricantes de \textit{software}, quais as vantagens de 
 
 Muitas pessoas quando ouvem o termo \textit{software} livre o associam à \textit{software} gratuito. Isso não é verdade. \textit{Software} livre não quer dizer \textit{software} gratuito e existem diversas abordagens comerciais que podem ser utilizadas para monetizar programas de código aberto.
 
-Existem inúmeras empresas que lucram com o \textit{software} livre. A Canonical, desenvolvedora da distribuição Linux Ubuntu tem uma receita anual de \$ 65,7 milhões de dólares. Ela se mantém através de doações e acordos comerciais para inserir conteúdo patrocinado dentro dos seus \textit{softwares}.
+Existem inúmeras empresas que lucram com o \textit{software} livre. A Canonical, desenvolvedora da distribuição Linux Ubuntu tem uma receita anual de \$ 65,7 milhões de dólares \cite{Brodkin}. Ela se mantém através de doações e acordos comerciais para inserir conteúdo patrocinado dentro dos seus \textit{softwares}.
 
-A Mozilla, empresa responsável pelo popular navegador de internet Firefox tem uma receita de \$ 330 milhões de dólares anuais. O Firefox, mesmo sendo  um \textit{softwares} livre, gera boa parte dessa receita através de acordo com empresas para agregação de serviços (como o Google Search ser o buscador padrão do navegador) e propagandas em algumas seções do navegador, como a aba "Nova Guia".
+A Mozilla, empresa responsável pelo popular navegador de internet Firefox tem uma receita de \$ 330 milhões de dólares anuais \cite{Mozilla}. O Firefox, mesmo sendo  um \textit{softwares} livre, gera boa parte dessa receita através de acordo com empresas para agregação de serviços (como o Google Search ser o buscador padrão do navegador) e propagandas em algumas seções do navegador, como a aba "Nova Guia".
 
-A Red Hat é, sem dúvida, uma das mais bem sucedidas empresas no ramo do \textit{softwares} livre. Ela atua através do fornecimento de soluções corporativas. Seus principais produtos são armazenamento, sistemas operacionais, consultoria, treinamento e suporte. Ela utiliza várias abordagens de mercado para vender seus serviços e isso tem dado muito certo. Em 2014, sua receita foi de \$ 1,53 bilhões de dólares. Seus serviços são amplamente utilizados e bem aceitos no mercado.
+A Red Hat é, sem dúvida, uma das mais bem sucedidas empresas no ramo do \textit{softwares} livre. Ela atua através do fornecimento de soluções corporativas. Seus principais produtos são armazenamento, sistemas operacionais, consultoria, treinamento e suporte. Ela utiliza várias abordagens de mercado para vender seus serviços e isso tem dado muito certo. Em 2014, sua receita foi de \$ 1,53 bilhões de dólares \cite{Red}. Seus serviços são amplamente utilizados e bem aceitos no mercado.
 
 Essas empresas todas trabalham desenvolvendo \textit{software} livre e tem uma receita considerável. Existem inúmeros outros exemplos de sucesso com o \textit{software} livre: Android, Apache, LibreOffice, Swift são exemplos de aplicações de sucesso no mundo do \textit{software} livre. 
 
@@ -268,7 +268,7 @@ aqui vc faz
 
 \subsection{Open Core}
 
-O Open Core é um modelo de negócio baseado no uso misto entre \textit{software} livre e \textit{software} fechado. No Open Core, as empresas disponibilizam uma versão básica, porém útil, de algum sistema feito como \textit{software} livre e vendem complementos para esse sistema. Esse complementos, como o próprio nome deixa claro, acrescenta alguma funcionalidade no sistema. Existem inúmeras soluções baseadas no Open Core, como o MySQL da Oracle. É um modelo de negócio muito interessante pois permite que empresas foquem no desenvolvimento de partes pequenas do sistema, produzindo com melhor qualidade e podendo oferecer um melhor suporte.
+O Open Core é um modelo de negócio baseado no uso misto entre \textit{software} livre e \textit{software} fechado. No Open Core, as empresas disponibilizam uma versão básica, porém útil, de algum sistema feito como \textit{software} livre e vendem complementos para esse sistema \cite{riehle2012single}. Esse complementos, como o próprio nome deixa claro, acrescenta alguma funcionalidade no sistema. Existem inúmeras soluções baseadas no Open Core, como o MySQL da Oracle. É um modelo de negócio muito interessante pois permite que empresas foquem no desenvolvimento de partes pequenas do sistema, produzindo com melhor qualidade e podendo oferecer um melhor suporte.
 A já citada Red Hat também faz uso do Open Core no seu serviço JBoss. 
 
 Para os clientes, é uma abordagem bastante interessante por que permite economizar ao usar um grande \textit{software} livre gratuito e comprar apenas complementos que esta precise.
