--- a/modelo_seminarios_latex_v1.2/artigo_bibliografia.bib
+++ b/modelo_seminarios_latex_v1.2/artigo_bibliografia.bib
@@ -76,53 +76,65 @@
   note   = {http://www.nlm.nih.gov/research/visible/ - accessed 19-July-2008}
 }
 
-@url{Br-linux:2016,
+@url{Campos:2016,
 author = {Augusto Campos},
 title = {O que {\'e} software livre},
 year = {2006},
-nota = {http://br-linux.org/linux/faq-softwarelivre}
+note = {http://br-linux.org/linux/faq-softwarelivre}
 }
 
+@url{Jose:2016,
+author = {Jos{\'e} Silva},
+title = {Economia e liberdade: o software livre une o {\'u}til ao agrad{\'a}vel},
+year = {2009},
+note = {https://www.vivaolinux.com.br/artigo/Economia-e-liberdade-o-software-livre-une-o-util-ao-agradavel}
+}
 
+@article{riehle2012single,
+  title={The single-vendor commercial open course business model},
+  author={Riehle, Dirk},
+  journal={Information Systems and e-Business Management},
+  volume={10},
+  number={1},
+  pages={5--17},
+  year={2012},
+  publisher={Springer}
+}
 
+@url{Brodkin,
+author = {Jon Brodkin},
+title = {Ubuntu maker boosted revenue in 2013 but doubled loss to \$21 million}.
+year = {2014},
+note = {http://arstechnica.com/business/2014/01/ubuntu-maker-boosted-revenue-in-2013-but-doubled-loss-to-21-million/}
+}
 
+@url{Red,
+author = {Red Hat},
+title = {"RED HAT INC 2014 Annual Report Form (10-K)"}.
+year = {2014},
+note = {http://www.sec.gov/Archives/edgar/data/1087423/000119312514157171/0001193125-14-157171-index.htm}
+}
 
+@url{Mozilla,
+author = {Mozilla},
+title = {INDEPENDENT AUDITORS? REPORT AND CONSOLIDATED FINANCIAL STATEMENTS}.
+year = {2013},
+note = {https://static.mozilla.com/moco/en-US/pdf/Mozilla_Audited_Financials_2014.pdf}
+}
 
+@url{Hecker:2016,
+author = {Frank Hecker},
+title = {Setting Up Shop: The Business of Open-Source Software},
+year = {2000},
+note = {http://hecker.org/writings/setting-up-shop}
+}
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
+@url{Castro,
+author = {Davi de Castro},
+title = {Entenda por que software livre {\'e} mais seguro},
+year = {2015},
+note = {http://www.ebc.com.br/tecnologia/2015/07/entenda-por-que-software-livre-e-mais-seguro-que-software-proprietario}
+}
 
 @mastersthesis{Angelo:2000,
 	Address = {Porto Alegre, RS},
